# kautil

./: .gitignore  Kautil-plan.md  README.md  pyproject.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
history/: 2026-03-07_cli-help-and-readme.md  2026-03-07_parallel_pr_worktree_implementation.md  2026-03-08_autil-kautil-comparison.md  2026-03-08_kautil-initial-implementation.md
kautil/: __init__.py  analyzer.py  audio.py  cli.py
samples/: .gitignore  Carl Sagan - Commencement Address 1990.txt  Mussorgsky - Night on Bald Mountain (Skidmore College Orchestra).txt  Smoke Alarm - Carsie Blanton.txt  test_fingerprint.json
tests/: __init__.py  conftest.py  test_loudness.py  test_silence.py  test_solo.py  test_speaker.py  test_visualization.py
